--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-playwright": "^2.1.0",
@@ -26,7 +27,8 @@
     "react-dom": "^19.0.0",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
